# Kinetic-Dispersion-Solver

./: CMakeLists.txt  LICENSE  README.md  arrayutils.h  common.h  setup.py  solver.cpp  solver2.cpp  species.cpp
examples/: ADI.ipynb  ICE.ipynb  two_stream_instability.ipynb
src/: KineticDispersionSolver.py  __init__.py
src/Kinetic-Dispersion-Solver/: KineticDispersionSolver.py  relativisticspecies.h  species.h
src/KineticDispersion/: __init__.py  arrayutils.cpp  common.h  kinetic_dispersion_solver.py
src/kinetic-dispersion-solver/: CMakeLists.txt  __init__.py  kinetic_dispersion_solver.py  relativisticspecies.cpp
src/kinetic_dispersion_solver/: solver.cpp
